# CAPS-Analyzer

./: .gitignore
CVS/: Entries  Repository
buildCommands/: compile
buildCommands/UIs/Qt-analyzer/: compile  compileMocFiles  compileQt-analyzer  compileRegFiles  controldatadlg.cpp.o.d  energydlg.cpp.o.d  generateMocFiles  generateUIFiles  graphdlg.cpp.o.d  graphselectdlg.cpp.o.d  healpixdlg.cpp.o.d  main.cpp.o.d  mainwindow.cpp.o.d  mapperdlg.cpp.o.d  mapselectdlg.cpp.o.d  moc_controldatadlg.cpp  moc_controldatadlg.cpp.o.d  moc_energydlg.cpp  moc_energydlg.cpp.o.d  moc_graphdlg.cpp  moc_graphdlg.cpp.o.d  moc_graphselectdlg.cpp  (+39 more)
buildCommands/libanalyzer/: compile
buildCommands/libgraphics/: compile
cmake/CVS/: Repository
cmake/Modules/: FindCCfits.cmake  FindHDF5.cmake  FindHDF5.cmake.nogood  FindHDF5.make
doc/CVS/: Entries  Repository
src/CVS/: Entries  Repository
src/UIs/Qt-analyzer/: CMakeLists.txt  Qt-analyzer.kdev4  associationselectdlg.cpp  associationselectdlg.h  associationselectdlg.ui  controldatadlg.h  dataselectdlg.cpp  dataselectdlg.h  dataselectdlg.old.ui  dataselectdlg.ui  energydlg.h  graphdlg.cpp  graphdlg.h  graphselectdlg.cpp  graphselectdlg.h  graphselectdlg.ui  healpixdlg.cpp  healpixdlg.h  healpixdlg.new.ui  healpixdlg.ui  healpixdlg.ui.original  mainwindow.cpp  mainwindow.cpp.original  mainwindow.h  mainwindow.ui  mapperdlg.cpp  mapperdlg.h  mapselectdlg.cpp  mapselectdlg.h  mapselectdlg.ui  multipleselectiondlg.cpp  multipleselectiondlg.h  multipleselectiondlg.ui  newMainWindow.cpp  pixelizerdlg.h  rshtdlg.h  spectrumdlg.cpp  spectrumdlg.h  spectrumdlg.ui  transformerdlg.cpp  (+1 more)
src/UIs/Qt-analyzer/.kdev4/: Qt-analyzer.kdev4
src/UIs/Qt-analyzer/CVS/: Entries  Repository
src/UIs/Qt-analyzer/icons/CVS/: Entries  Repository
src/libanalyzer/: CMakeLists.txt  analyzer.cpp  association.cpp  association.cpp.edited  association.cpp.original  association.h  atypes.h  csvmanager.cpp  csvmanager.h  csvmanager.orig.cpp  csvmanager.orig.h  cubedata.h  filemanager.cpp  filemanager.h  fitsmanager.cpp  fitsmanager.cpp.original  fitsmanager.h  fitsmanager.orig.cpp  hdf5manager.cpp  hdf5manager.h  healpix.cpp  healpix.cpp.edited  healpix.cpp.original  healpix.h  inputmatrixdata.cpp  libanalyzer.kdev4  matrixdata.h  pixelizer.cpp  pixelizer.h  pixelizer.h.original  rsht.cpp  rsht.h  spectrum.cpp  spectrum.cpp.orig  spectrum.h  spectrum.h.orig  transformer.h  vectordata.h
src/libgraphics/: datamap.cpp  dataspectrum.cpp  gdalmapper.cpp  grapher.cpp  libgraphics.kdev4  mollweide.cpp  mollweide.cpp.edited  progress.h  projmapper.cpp
(+65 files in other folders)
